<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true">

    <com.example.karlo.sstconference.ui.CustomScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/button_blue"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/text_facility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="14sp"/>

            <ImageView
                tools:ignore="ContentDescription"
                android:id="@+id/image_view"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@color/button_blue"/>

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_abstract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif"
                android:gravity="start"
                android:layout_gravity="start"
                android:textSize="14sp"/>

        </LinearLayout>
    </com.example.karlo.sstconference.ui.CustomScrollView>

    <RelativeLayout
        android:id="@+id/arrows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:visibility="gone">

        <ImageView
            tools:ignore="ContentDescription"
            android:id="@+id/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_action_arrow_left"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="20dp"/>

        <ImageView
            tools:ignore="ContentDescription"
            android:id="@+id/right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_action_arrow_right"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="20dp"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>