<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    app:cardUseCompatPadding="true"
    style="@style/BasicParentLayout"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@id/toolbar" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:clipToPadding="false"
        android:overScrollMode="never" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBar"/>

</RelativeLayout>
